Sesja Claude 12: ADR-006ext+008-013, aneks Sprint 2 v2, plan Sprint 3 iteracji, onboarding GPT